[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cancerrag"
version = "0.1.2"
description = "LLM-powered cancer variant annotation with OncoKB + CIViC"
authors = [{name = "Dami Gupta", email = "dami.gupta@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "httpx",
    "openai",           # works with OpenAI, Grok, Claude, local LLMs via LiteLLM
    "pydantic",
    "python-dotenv"
]

[project.optional-dependencies]
dev = ["pytest", "black"]

[project.scripts]
cancerrag = "cancerrag.cli:app"